--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
-    </style>
-    <link rel="stylesheet" href="./css1/styles.css">
+    <link rel="stylesheet" href="css1/styles.css">
 </head>
 <body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, iste! Beatae exercitationem fuga eveniet dignissimos magnam ab vitae, quisquam accusamus, harum, corrupti autem repellendus error aperiam nesciunt saepe eaque quasi?</p>
+    <div class="caja1"></div>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque iste exercitationem ab assumenda, praesentium laborum rerum quia totam? Maiores veritatis maxime excepturi et nesciunt quo dolorum repellat, voluptatibus soluta reiciendis.</p>
-    <div style="color: aqua;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, dignissimos veritatis, libero magnam impedit eum quis deleniti facere dolorum ipsam sint excepturi voluptatibus voluptatem modi est illo praesentium minus soluta.</div>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, dignissimos veritatis, libero magnam impedit eum quis deleniti facere dolorum ipsam sint excepturi voluptatibus voluptatem modi est illo praesentium minus soluta.</div>
 </body>
 </html>
+<!--coursera; edx-->
