--- a/index.html
+++ b/index.html
@@ -5,13 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css1/styles.css">
+    <link rel="stylesheet" href="css1/styles2.css">
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, iste! Beatae exercitationem fuga eveniet dignissimos magnam ab vitae, quisquam accusamus, harum, corrupti autem repellendus error aperiam nesciunt saepe eaque quasi?</p>
+    <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, iste! Beatae exercitationem fuga eveniet dignissimos magnam ab vitae, quisquam accusamus, harum, corrupti autem repellendus error aperiam nesciunt saepe eaque quasi?</p>
     <div class="caja1"></div>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque iste exercitationem ab assumenda, praesentium laborum rerum quia totam? Maiores veritatis maxime excepturi et nesciunt quo dolorum repellat, voluptatibus soluta reiciendis.</p>
-    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, dignissimos veritatis, libero magnam impedit eum quis deleniti facere dolorum ipsam sint excepturi voluptatibus voluptatem modi est illo praesentium minus soluta.</div>
+    <p id="importante">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque iste exercitationem ab assumenda, praesentium laborum rerum quia totam? Maiores veritatis maxime excepturi et nesciunt quo dolorum repellat, voluptatibus soluta reiciendis.</p>
+    <div class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, dignissimos veritatis, libero magnam impedit eum quis deleniti facere dolorum ipsam sint excepturi voluptatibus voluptatem modi est illo praesentium minus soluta.</div>
+    <!--lo escrito de practiva-->
+    <article class="item">
+        <p id="Primer" class="parra1">Este es mi mundo ideal XD</p>
+        <p id="Segundo" class="parra2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque iste exercitationem ab assumenda, praesentium laborum</p>
+    </article>
+    <article class="item">
+        <p id="Primer" class="parra1">Este es mi mundo ideal XD</p>
+        <p id="Segundo" class="parra2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque iste exercitationem ab assumenda, praesentium laborum</p>
+    </article>
+    <article class="item">
+        <p id="Primer" class="parra1">Este es mi mundo ideal XD</p>
+        <p id="Segundo" class="parra2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque iste exercitationem ab assumenda, praesentium laborum</p>
+    </article>
+    <article class="item">
+        <p id="Primer" class="parra1">Este es mi mundo ideal XD</p>
+        <p id="Segundo" class="parra2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque iste exercitationem ab assumenda, praesentium laborum</p>
+    </article>
+
 </body>
 </html>
 <!--coursera; edx-->
